--- a/src/JarOfGreen/BrowserIDBundle/Resources/views/Default/login.html.twig
+++ b/src/JarOfGreen/BrowserIDBundle/Resources/views/Default/login.html.twig
@@ -1,5 +1,23 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-	LOGIN
+	<script src="https://login.persona.org/include.js"></script>
+	<script>
+		navigator.id.watch({
+			loggedInUser: null,
+			onlogin: function (assertion) {
+				var assertion_field = document.getElementById("assertion-field");
+				assertion_field.value = assertion;
+				var login_form = document.getElementById("login-form");
+				login_form.submit();
+			},
+			onlogout: function () {
+				window.location = '?logout';
+			}
+		});
+	</script>
+	<form id="login-form" method="POST">
+		<input id="assertion-field" type="hidden" name="assertion" value="">
+	</form>
+	<p><a href="javascript:navigator.id.request()">Login</a>
 {% endblock %}
